fix(users): use singletonList to keep List<Object[]> intact in test stubs (#501)